--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 
   <div class="video-overlay header-text">
     <div class="caption">
-      <h6>Graduate School of Management</h6>
+      <h6>Graduate School&college of Management</h6>
       <h2><em>Your</em> Classroom</h2>
       <div class="main-button">
         <div class="scroll-to-section">
